--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div id="app" class="flex-center">
     <div class="container">
-        <h1><a href="https://github.com/overcat/multisig.tools">multisig.tools</a> example</h1>
+        <h1><a href="https://github.com/overcat/stellar-multisig-coordinator">multisig.tools</a> example</h1>
         <small>PUBLIC NET: <a href="https://multisig.tools">https://multisig.tools</a></small>
         <br>
         <small>TEST NET: <a href="https://testnet.multisig.tools">https://testnet.multisig.tools</a></small>
